# gray-decoders

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ClangOverrides.txt  README.md  build.sh  decode  memcheck.sh  run_format.sh  run_format_osx.sh  setup.sh  valgrind-out.txt
c/: CMakeLists.txt
cpp/: CMakeLists.txt  decode.cpp  run_format.sh
cpp/data/: raster.h
cpp/decoder/: safer_thread.h
cpp/net/: CMakeLists.txt  core.h  net_core.h  tcp.cpp  tcp.h
cpp/net/linux/: tcp.cpp  tcp.h
cpp/receiver/: CMakeLists.txt  receiver.h  receiver_tcp.cpp  receiver_tcp.h
cpp/runtime_config/: runtime_config.h
cpp/util/: CMakeLists.txt  log.h  runtime_config.cpp  runtime_config.h  safer_thread.h  util.cpp  util.h
python/: neuron.py  nsimulate.py  nsimulate_util.py  raster.py  raster_util.py  setup.py  stimuli.py
